Convert "The 86", a few tweaks.

--- a/_posts/2014-12-08-hodor-cse.md
+++ b/_posts/2014-12-08-hodor-cse.md
@@ -24,7 +24,7 @@ of Doors CS) to localizing it is just replacing the hard-coded strings
 and rebuilding.
 
 [translation-thread]: http://www.cemetech.net/forum/viewtopic.php?t=10989
-[^1]: That names sounds stupider every time I write it out. Henceforth, it's
+[^1]: That name sounds stupider every time I write it out. Henceforth, it's
       just "the CSE."
 
 As something of a joke, it was proposed to make additional "joke" translations,
@@ -81,7 +81,7 @@ the 8ck header) looks like this:
 :20404000C30272CD4F40C30272CDB540C30272EF67452100002275FE3EA03273FECD63405B
 ```
 
-Lines 1 and 8 here are the TI-specific page markers, indicating the beginning
+Lines 1 and 7 here are the TI-specific page markers, indicating the beginning
 of pages 0 and 1, respectively. The lines following each of those contain
 32 (`20` hex) bytes of data starting at address 0x40000 (`4000`). I extracted
 the data from each page out to its own file with a text editor, minus the
@@ -114,10 +114,10 @@ With some knowledge of the strings in there, it was reasonably short work to
 find them with a hex editor (in this case I used [HxD][hxd]) and replace
 them with variants on the string "Hodor".
 
-[hxd] http://mh-nexus.de/en/hxd/
+[hxd]: http://mh-nexus.de/en/hxd/
 
 <figure>
-    <img src="/images/hodor-page00.png" />
+    <img src="/images/2014/hodor-page00.png" />
     <figcaption>HxD helpfully highlights modified bytes in red.</figcaption>
 </figure>
 
