Finish writing the sax-ng post.

--- a/_posts/2016-05-27-sax-ng.md
+++ b/_posts/2016-05-27-sax-ng.md
@@ -1,11 +1,9 @@
 ---
-date: 2015-09-13
+date: 2016-05-27
 title: sax-ng
-subtitle: blah blah blah
+subtitle: Building a small chat service
 layout: post
 ---
-
-DRAFT DRAFT DRAFT DRAFT
 
 Over on [Cemetech][cemetech], we've long had an embedded chat widget called
 "SAX" ("Simultaneous Asynchronous eXchange"). It behaves kind of like a
@@ -46,9 +44,10 @@ large fraction of users would have been using Internet Explorer 5 or 6 (the
 first version of Internet Explorer released which supported the standard form of
 `XMLHttpRequest` was version 7).
 
-Around May of this year, I took it upon myself to design and implement a
-more modern replacement for SAX. This post discusses that process and describes
-the design of the replacement, which I have called "sax-ng."
+Around a year ago (that's how long this post has been a draft for!), I took it
+upon myself to design and implement a more modern replacement for SAX. This post
+discusses that process and describes the design of the replacement, which I have
+called "sax-ng."
 
 <!-- more -->
 
@@ -239,7 +238,9 @@ index 9c69628..3666ba0 100644
 It took me a while to work out how exactly to best implement this feature, but
 considering I had never worked in Erlang before it was reasonably easy. I do
 suspect some familiarity with Haskell and Rust provided background to more
-easily understand certain aspects of the language, though.
+easily understand certain aspects of the language, though. The requirement
+that I duplicate the `muc_registered` record (since apparently Erlang provides
+no way to import records from another file) rubs me the wrong way, though.
 
 In practice, then, a custom script traverses the web site database, invoking
 `ejabberdctl` to register the nickname for every existing user at server startup
@@ -313,8 +314,53 @@ site configuration and writes the message into that socket. The relay bot
 
 ### saxjax-ng
 
-## Contact with the <del>enemy</del> users
+Since keeping a web page open for chatting is not particularly convenient, we
+also operate a bridge between the SAX chat and an IRC channel called saxjax. The
+original version of this relay bot was of questionable quality at best: the
+Python implementation ran two threads, each providing one-way communication
+though a list. No concurrency primitives, little sanity.
 
-reverse proxy it through the web server
+Prior to creation of sax-ng I had put some amount of effort in improving the
+reliability of that system, since an error in either thread would halt all
+processing of messages in the direction corresponding to the thread in which the
+error occurred. Given there was essentially no error handling anywhere in the
+program, this sort of thing happened with dismaying frequency.
 
-also means we don't need to configure it with certificates
+saxjax-ng is very similar in design to webridge, in that it's Twisted-based and
+uses the Twisted XMPP library. On the IRC side, it uses Twisted's IRC library
+(shocking!). Both ends of this end up being very robust when combined with
+the components that provide automatic reconnection and a little bit of custom
+logic for rotating through a list of IRC servers. Twisted guarantees
+singlethreaded operation (that's the whole point; it's an async event loop), so
+relaying a message between the two connections is simply a matter of repeating it
+on the other connection.
+
+## Contact with users
+
+This system has been perfectly reliable since deployment, after a few changes.
+Most notably, the http-bind interface for ejabberd was initially exposed on port
+5280 (the default for http-bind). Users behind certain restrictive firewalls
+can't connect to that port, so we quickly reconfigured our web server to
+reverse-proxy to http-bind and solve that problem. Doing so also means the XMPP
+server doesn't need its own copy of the server's SSL certificate.
+
+There are still some pieces of the web site that emit messages containing HTML
+entities in accordance with the old system. The new system.. doesn't emit HTML
+entities because that should be the responsibility of something doing HTML
+presentation (Strong Opinion) and I haven't bothered trying to find the things
+that are still emitting HTML-like strings.
+
+The reconnect logic on the web client tends to act like it's received multiples
+of every message that arrives after it's tried to reconnect to XMPP, such as
+when a user puts their computer to sleep and later resumes; the web client tries
+to detect the lost connection and reopen it, and I think some event handlers
+are getting duplicated at that point. Haven't bothered working on a fix for that
+either.
+
+# Conclusion
+
+ejabberd is a solid piece of software and not hard to customize. Twisted is a
+good library for building reliable network programs in Python, but has enough
+depth that some of its features lack useful documentation so finding what you
+need and figuring out how to use it can be difficult. This writeup has been
+languishing for too long so I'm done writing now.
