Add tags and categories to posts that lack them.

--- a/content/2014/2014-12-08-hodor-cse.md
+++ b/content/2014/2014-12-08-hodor-cse.md
@@ -2,6 +2,15 @@
 date: 2014-12-08
 title: HodorCSE
 subtitle: An adventure in string replacement
+categories:
+ - Software
+ - Hacking/Tweaking
+tags:
+ - translation
+ - calculators
+ - ticalc
+ - cemetech
+ - cryptography
 ---
 
 Localization of software, while not [trivial][perl-maketext], is not a
