Output posts to the root, not /posts
This is a Hugo config change and addition of explicit slugs for posts
that lack them to ensure they have stable paths.

--- a/content/posts/2014/2014-12-08-hodor-cse.md
+++ b/content/posts/2014/2014-12-08-hodor-cse.md
@@ -1,6 +1,7 @@
 ---
-date: 2014-12-08
+date: 2015-02-15
 title: HodorCSE
+slug: hodorcse
 subtitle: An adventure in string replacement
 categories:
  - Software
