Move the swap post to posts
I don't really want more categories than simple
"blog posts" anymore, so move this into posts
and leave a redirect from the old location.

--- a/content/posts/2011/2011-11-25-swap.md
+++ b/content/posts/2011/2011-11-25-swap.md
@@ -11,6 +11,8 @@ tags: []
 type: page
 updated: 2022-12-01T22:28:29.869Z
 categories: []
+aliases:
+  - /essays/the-case-for-swap/
 ---
 <aside style="background-color: #eea; padding: .5em; border-radius: 1em;">
 <b>Note from 2022</b>: this article is old and still relevant, but Chris Down's "<a href="https://chrisdown.name/2018/01/02/in-defence-of-swap.html">In Defence of Swap</a>" might be a better reference for a contemporary reader, since:
