Clean up a few inline styles to work well in dark themes
Mostly converting old asides to use the newer information class,
but also adding a media query to the about page.

--- a/content/posts/2011/2011-11-25-swap.md
+++ b/content/posts/2011/2011-11-25-swap.md
@@ -13,7 +13,7 @@ categories: []
 aliases:
   - /essays/the-case-for-swap/
 ---
-<aside style="background-color: #eea; padding: .5em; border-radius: 1em;">
+<aside class="information">
 <b>Note from 2022</b>: this article is old and still relevant, but Chris Down's "<a href="https://chrisdown.name/2018/01/02/in-defence-of-swap.html">In Defence of Swap</a>" might be a better reference for a contemporary reader, since:
 <ul>
   <li>I focused primarily on the desktop use case here.</li>
